--- a/wkwk.html
+++ b/wkwk.html
@@ -104,31 +104,31 @@
     <tbody>
       <tr>
         <td>1</td>
-        <td>Aji</td>
-        <td>23.83.xxxx</td>
+        <td>Muchammad Nur Aji Hidayat</td>
+        <td>23.83.0974</td>
         <td>KETUA</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Mexx</td>
-        <td>23.83.xxxx</td>
+        <td>Anastira Mamonto</td>
+        <td>23.83.0954</td>
         <td>ANGGOTA</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>Lskdgih</td>
-        <td>23.83.xxxx</td>
+        <td>Yogi Nur Chandra Ramadhan</td>
+        <td>23.83.0988</td>
         <td>ANGGOTA</td>
       </tr>
       <tr>
         <td>4</td>
-        <td>Lskdfj</td>
-        <td>23.83.xxxx</td>
+        <td>Azyumardi Maulana</td>
+        <td>23.83.0996</td>
         <td>ANGGOTA</td>
       </tr>
       <tr>
         <td>5</td>
-        <td>Dfsg</td>
+        <td>aji</td>
         <td>23.83.xxxx</td>
         <td>ANGGOTA</td>
       </tr>
@@ -139,3 +139,4 @@
 
 </body>
 </html>
+
